fix(xod-client): fix deducing of types in Jumper node body

--- a/packages/xod-client/src/core/styles/components/Node.scss
+++ b/packages/xod-client/src/core/styles/components/Node.scss
@@ -104,6 +104,9 @@
     &.error {
       stroke: $color-datatype-dead;
     }
+    &.generic {
+      stroke: $color-node-outline;
+    }
   }
 
   .nodeLabelContainer {
